==> xiaxquan/Tradition_DTU/FTU/bsp/stm32f429-apollo/drivers/drv_usart.c <==
#include "board.h"
#include "drv_usart.h"

static rt_err_t _usart_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct stm32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = (struct stm32_uart *)serial->parent.user_data;

	HAL_UART_DeInit(&uart->UartHandle);
	
    uart->UartHandle.Init.BaudRate     = cfg->baud_rate;
    uart->UartHandle.Init.HwFlowCtl    = UART_HWCONTROL_NONE;
    uart->UartHandle.Init.Mode             = UART_MODE_TX_RX;
    uart->UartHandle.Init.OverSampling = UART_OVERSAMPLING_16;

    switch (cfg->data_bits)
    {
        case DATA_BITS_8:
            uart->UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
            break;
				
        case DATA_BITS_9:
            uart->UartHandle.Init.WordLength = UART_WORDLENGTH_9B;
            break;
				
        default:
            uart->UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
            break;
    }
		
    switch (cfg->stop_bits)
    {
        case STOP_BITS_1:
            uart->UartHandle.Init.StopBits   = UART_STOPBITS_1;
            break;
				
        case STOP_BITS_2:
            uart->UartHandle.Init.StopBits   = UART_STOPBITS_2;
            break;
	
        default:
            uart->UartHandle.Init.StopBits   = UART_STOPBITS_1;
            break;
  }
		
   switch (cfg->parity)
   {
        case PARITY_NONE:
            uart->UartHandle.Init.Parity     = UART_PARITY_NONE;
            break;
        case PARITY_ODD:
            uart->UartHandle.Init.Parity     = UART_PARITY_ODD;
            break;
        case PARITY_EVEN:
            uart->UartHandle.Init.Parity     = UART_PARITY_EVEN;
            break;
        default:
            uart->UartHandle.Init.Parity     = UART_PARITY_NONE;
            break;
    }
	
    if (HAL_UART_Init(&uart->UartHandle) != HAL_OK)
    {
        return(RT_ERROR);
    }

    return(RT_EOK);
}

static rt_err_t _usart_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct stm32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart *)serial->parent.user_data;

    switch (cmd)
    {
        case RT_DEVICE_CTRL_CLR_INT:
            /* disable rx irq */
            NVIC_DisableIRQ(uart->irq);
            /* disable interrupt */
            __HAL_UART_DISABLE_IT(&uart->UartHandle, UART_IT_RXNE);
            break;
				
        case RT_DEVICE_CTRL_SET_INT:
            /* enable rx irq */
            NVIC_EnableIRQ(uart->irq);
            /* enable interrupt */
            __HAL_UART_ENABLE_IT(&uart->UartHandle, UART_IT_RXNE);
            break;
    }

    return(RT_EOK);
}

static int _usart_putc(struct rt_serial_device *serial, char c)
{
    struct stm32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart *)serial->parent.user_data;

    while((__HAL_UART_GET_FLAG(&uart->UartHandle, UART_FLAG_TXE) == RESET));
    uart->UartHandle.Instance->DR = c;
	
    return(1);
}

static int _usart_getc(struct rt_serial_device *serial)
{
    int ch;
    struct stm32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
	
    uart = (struct stm32_uart *)serial->parent.user_data;

    ch = -1;
    if (__HAL_UART_GET_FLAG(&uart->UartHandle, UART_FLAG_RXNE) != RESET)
	{
        ch = uart->UartHandle.Instance->DR & 0xff;
	}
		
    return(ch);
}
