==> iysheng/rt-thread/bsp/wch/riscv/Libraries/ch32_drivers/drv_usart.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include "board.h"
#include "riscv-ops.h"
#include "drv_uart.h"
#include "ch32v10x_rcc.h"
#include "ch32v10x_usart.h"
#include "ch32v10x_misc.h"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static rt_err_t ch32v1_usart_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct usart_device *usart_dev;
    USART_InitTypeDef USART_InitStructure;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    usart_dev = (struct usart_device *)serial;
    RT_ASSERT(usart_dev != RT_NULL);

    USART_StructInit(&USART_InitStructure);

    USART_InitStructure.USART_BaudRate = cfg->baud_rate;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        USART_InitStructure.USART_WordLength = USART_WordLength_8b;
        break;
    case DATA_BITS_9:
        USART_InitStructure.USART_WordLength = USART_WordLength_9b;
        break;
    default:
        USART_InitStructure.USART_WordLength = USART_WordLength_8b;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        USART_InitStructure.USART_StopBits = USART_StopBits_1;
        break;
    case STOP_BITS_2:
        USART_InitStructure.USART_StopBits = USART_StopBits_2;
        break;
    default:
        USART_InitStructure.USART_StopBits = USART_StopBits_1;
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_NONE:
        USART_InitStructure.USART_Parity = USART_Parity_No;
        break;
    case PARITY_ODD:
        USART_InitStructure.USART_Parity = USART_Parity_Odd;
        break;
    case PARITY_EVEN:
        USART_InitStructure.USART_Parity = USART_Parity_Even;
        break;
    default:
        USART_InitStructure.USART_Parity = USART_Parity_No;
        break;
    }
    USART_Init(usart_dev->periph, &USART_InitStructure);
    USART_Cmd(usart_dev->periph, ENABLE);

    return RT_EOK;
}

static rt_err_t ch32v1_usart_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct usart_device *usart_dev;

    NVIC_InitTypeDef NVIC_InitStruct;

//    return 0;
    RT_ASSERT(serial != RT_NULL);

    usart_dev = (struct usart_device *)serial;

    RT_ASSERT(usart_dev != RT_NULL);

    NVIC_InitStruct.NVIC_IRQChannel = usart_dev->irqn;
    NVIC_InitStruct.NVIC_IRQChannelPreemptionPriority = 2;
    NVIC_InitStruct.NVIC_IRQChannelSubPriority = 1;

    switch (cmd)
    {
    case RT_DEVICE_CTRL_CLR_INT:
        NVIC_InitStruct.NVIC_IRQChannelCmd = DISABLE;
        NVIC_Init(&NVIC_InitStruct);
        USART_ITConfig(usart_dev->periph, USART_IT_RXNE, DISABLE);
        break;

    case RT_DEVICE_CTRL_SET_INT:
        NVIC_InitStruct.NVIC_IRQChannelCmd = ENABLE;
        NVIC_Init(&NVIC_InitStruct);
        USART_ITConfig(usart_dev->periph, USART_IT_RXNE, ENABLE);
        USART_ITConfig(usart_dev->periph, USART_IT_TC, ENABLE);
        break;

    case RT_DEVICE_CHECK_OPTMODE:
        return RT_SERIAL_TX_BLOCKING_BUFFER;
    }

    return RT_EOK;
}

static int ch32v1_usart_putc(struct rt_serial_device *serial, char ch)
{
    struct usart_device *usart_dev;

    RT_ASSERT(serial != RT_NULL);

    usart_dev = (struct usart_device *)serial;

    RT_ASSERT(usart_dev != RT_NULL);

    USART_SendData(usart_dev->periph, (uint8_t)ch);
    while (USART_GetFlagStatus(usart_dev->periph, USART_FLAG_TXE) == RESET)
        ;

    return 1;
}

static int ch32v1_usart_getc(struct rt_serial_device *serial)
{
    struct usart_device *usart_dev;
    int ch;

    RT_ASSERT(serial != RT_NULL);

    usart_dev = (struct usart_device *)serial;

    RT_ASSERT(usart_dev != RT_NULL);

    ch = -1;
    if (RESET != USART_GetFlagStatus(usart_dev->periph, USART_FLAG_RXNE))
    {
        ch = USART_ReceiveData(usart_dev->periph) & 0xff;
    }

    return ch;
}
